
set(lzham_SRC
comp/lzham_comp.h
comp/lzham_lzbase.cpp
comp/lzham_lzbase.h
comp/lzham_lzcomp.cpp
comp/lzham_lzcomp_internal.cpp
comp/lzham_lzcomp_internal.h
comp/lzham_match_accel.cpp
comp/lzham_match_accel.h
comp/lzham_null_threading.h
comp/lzham_pthreads_threading.cpp
comp/lzham_pthreads_threading.h
comp/lzham_threading.h
comp/lzham_win32_threading.cpp
comp/lzham_win32_threading.h
decomp/lzham_assert.cpp
decomp/lzham_assert.h
decomp/lzham_checksum.cpp
decomp/lzham_checksum.h
decomp/lzham_config.h
decomp/lzham_core.h
decomp/lzham_decomp.h
decomp/lzham_helpers.h
decomp/lzham_huffman_codes.cpp
decomp/lzham_huffman_codes.h
decomp/lzham_lzdecomp.cpp
decomp/lzham_lzdecompbase.cpp
decomp/lzham_lzdecompbase.h
decomp/lzham_math.h
decomp/lzham_mem.cpp
decomp/lzham_mem.h
decomp/lzham_platform.cpp
decomp/lzham_platform.h
decomp/lzham_polar_codes.cpp
decomp/lzham_polar_codes.h
decomp/lzham_prefix_coding.cpp
decomp/lzham_prefix_coding.h
decomp/lzham_symbol_codec.cpp
decomp/lzham_symbol_codec.h
decomp/lzham_timer.cpp
decomp/lzham_timer.h
decomp/lzham_traits.h
decomp/lzham_types.h
decomp/lzham_utils.h
decomp/lzham_vector.cpp
decomp/lzham_vector.h
)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/comp")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/decomp")

if(MSVC)
	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
	add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
endif()

add_library(lzham ${lzham_SRC})
